--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.feature.worldbuilding": "1.0.1",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.serialization": "3.1.2",
+    "com.unity.splines": "2.7.2",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
